# Tardis

./: .gitmodules  CMakeLists.txt  README.md
plugins/honor_cust_lib/: CMakeLists.txt  HonorCust4Dongle.cpp  HonorCust4Dongle.h  IHonorCustomizationForDongle.h
plugins/write_imei/: CMakeLists.txt  WriteImeiPlugin.cpp  WriteImeiPlugin.h
src/app/: Application.cpp  Application.h  CMakeLists.txt  CallerHandler.h  ConfigHandler.h  JsonHandler.h  Tardis.cpp  Test.cpp  main.cpp
src/communication/: CMakeLists.txt  Communication.h  SerialPort.cpp  SerialPort.h
src/core/: Base.h  Caller.h  CallerContainer.cpp  CallerContainer.h  DynamicModule.cpp  DynamicModule.h  Engine.cpp  Engine.h  Event.h  FreeCaller.h  Helper.h  ICaller.h  IHandler.h  IPlugin.h  JsonHandler.h  JsonParser.cpp  JsonParser.h  LamdaCaller.h  Log.h  Plugin.cpp  Plugin.h  Plugin.inl  PluginManager.cpp  PluginManager.h  RapidJsonParser.cpp  RapidJsonParser.h  RawDataContainer.cpp  RawDataContainer.h  Runner.cpp  Runner.h  SpdLog.cpp  SpdLog.h  Tardis.h  ValueHelper copy.h  ValueHelper.cpp  ValueHelper.h
src/test/: CMakeLists.txt  Test.cpp  sequence.json
src/ui/: AWidget.cpp  AWidget.h  Canvas.cpp  Canvas.h  DataDispatcher.h  DirectX12Device.cpp  DirectX12Device.h  IDrawable.h  IPlugin.h  PanelWindow.cpp  PanelWindow.h  PanelsManager.cpp  PanelsManager.h  Pluginable.h  RenderDevice.h  WidgetContainer.cpp  WidgetContainer.h  Window.h  WindowEditor.cpp  WindowEditor.h  WindowTestStand.cpp  WindowTestStand.h
src/ui/imgui/: imconfig.h  imgui.cpp  imgui_widgets.cpp
src/ui/layout/: Collapsing.cpp  Collapsing.h  CollapsingEx.cpp  CollapsingEx.h  Group.cpp  Group.h  GroupChild.cpp  GroupChild.h  GroupSameline.cpp  GroupSameline.h  GroupSamelineEx.cpp  GroupSamelineEx.h  GroupTable.cpp  GroupTable.h  PopupWindow.cpp  PopupWindow.h  TreeNode.cpp  TreeNode.h
src/ui/panel/: APanel.cpp  APanel.h  MainMenuBar.cpp  MainMenuBar.h  PanelDemo.cpp  PanelDemo.h  PanelMenuBar.cpp  PanelMenuBar.h  PanelPluginManager.cpp  PanelPluginManager.h  PanelProperties.cpp  PanelProperties.h  PanelSequenceEditor.cpp  PanelSequenceEditor.h  PanelTestBoard.cpp  PanelTestBoard.h  PanelTestStand.cpp  PanelTestStand.h  PanelWindow.cpp  PanelWindow.h
src/ui/plugin/: Callback.h  DDSource.h  DDTarget.h  DataDispatcher.h
src/ui/widgets/: AButton.h  Button.cpp  Button.h  Caller.cpp  Caller.h  CheckBox.cpp  CheckBox.h  ComboBox.cpp  ComboBox.h  ComboBoxT.h  DataWidget.h  DragScalarRange.cpp  DragScalarRange.h  DragSingleScalar.cpp  DragSingleScalar.h  HelperMarker.cpp  HelperMarker.h  InputText.cpp  InputText.h  LabelText.cpp  LabelText.h  NewPlugin.cpp  NewPlugin.h  Separator.cpp  Separator.h  Spacing.cpp  Spacing.h  TestBoard.cpp  TestBoard.h  TestItemList.cpp  TestItemList.h  Text.cpp  Text.h  TextColored.cpp  TextColored.h  WidgetRunnerProperty.cpp  WidgetRunnerProperty.h  tempCodeRunnerFile.cpp
